gcc/testsuite/rust/rustc/ui/rfc-2627-raw-dylib/feature-gate-raw-dylib-2.rs
#[link(name="foo")]
extern {
    #[link_ordinal(42)]
// { dg-error ".E0658." "" { target *-*-* } .-1 }
    fn foo();
}

fn main() {}

